--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,6 @@
 PORT=3000
 DATABASE_URL="postgresql://postgres:12345678@localhost:5432/catalogo_db?schema=public"
+
+# JWT Configuration
+JWT_SECRET="tu_clave_secreta_muy_segura_cambiar_en_produccion"
+JWT_EXPIRES_IN="24h"
